v2.6 - UI - Mobile responsive fixes
-Button text should not be cut off on mobile size. Padding and
font-size needs to by dynamic according to view width.

--- a/content/css/app.css
+++ b/content/css/app.css
@@ -10,13 +10,13 @@ section {
 #enter-username-label {
     /* grey */
     color: #757575;
-    padding-left: 20px;
+    padding-left: 5%;
 }
 
 #error-label {
     /* grey */
     color: #757575;
-    padding-left: 20px;
+    padding-left: 5%;
 }
 
 #username-input {
@@ -26,8 +26,9 @@ section {
     color: #616161;
     background-color: #f5f5f5;
     margin: 0;
-    padding: 20px;
-    font-size: 3rem;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-size: calc(2rem + 1vw);
     width: 74%;
     height: 75px;
     vertical-align: bottom;
@@ -42,8 +43,9 @@ section {
     /* almost white grey */
     color: #FAFAFA;
     margin-left: -3px;
-    padding: 20px;
-    font-size: 2.5rem;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-size: calc(2rem + 1vw);
     width: 24%;
     height: 75px;
 }
